# OCR

./: .gitignore  PIL2CV.py  README.md  file_type_detector.py  imageConverter.py  image_converter.py  main.py  output2.txt  output3.txt  output8.txt  preprocess.py  pyproject.toml  setup.py  text-detect.py
app/: imageConverter.py
dir/: PIL2CV.py  filetypeDetector.py  imageConverter.py  preprocess.py
output/: output.txt
