
[tool.poetry]
name = "ocr"
version = "0.1.0"
description = "OCR with CLI fro JPG, PNG and PDF"
authors = ["Vsevolod Mineev <vsevolod.mineev@gmail.com>"]
license = "MIT License"
packages = [
    { include = "preprocess.py" },
    { include = "file_type_detector.py" },
    { include = "imageConverter.py" },
    { include = "PIL2CV.py" },
    { include = "preprocess.py" },

]

[tool.poetry.dependencies]
python = "^3.7"
fire = "^0.4.0"
pytesseract = "^0.3.8"
pdf2image = "^1.16.0"
opencv-python = "^4.5.4.60"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

