
[tool.poetry]
name = "OCR-pdf-jpg-png"
version = "0.9.0"
description = "Tesseract OCR with OpenCV preprocessing and auto-correct."
authors = ["Vsevolod Mineev <vsevolod.mineev@gmail.com>"]
license = "MIT License"
packages = [
    { include = "dir/preprocess.py" },
    { include = "dir/filetypeDetector.py" },
    { include = "dir/imageConverter.py" },
    { include = "dir/PIL2CV.py" },

]

[tool.poetry.dependencies]
python = "^3.7,<3.11"
fire = "^0.4.0"
pytesseract = "^0.3.8"
pdf2image = "^1.16.0"
opencv-python = "^4.5.4.60"
autocorrect = "^2.6.0"

[tool.poetry.scripts]
OCR = "main:text_detect"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

